--- a/app/src/main/res/layout/simple_list_item_2_material.xml
+++ b/app/src/main/res/layout/simple_list_item_2_material.xml
@@ -8,8 +8,10 @@
               android:minHeight="?attr/listPreferredItemHeight"
               android:orientation="vertical"
               android:paddingBottom="@dimen/list_item_padding"
+              android:paddingEnd="?attr/listPreferredItemPaddingRight"
               android:paddingLeft="?attr/listPreferredItemPaddingLeft"
               android:paddingRight="?attr/listPreferredItemPaddingRight"
+              android:paddingStart="?attr/listPreferredItemPaddingLeft"
               android:paddingTop="@dimen/list_item_padding">
 
     <TextView
