--- a/app/src/main/res/layout/dialog_room_image.xml
+++ b/app/src/main/res/layout/dialog_room_image.xml
@@ -9,8 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:minHeight="56dp"/>
 
