--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -112,8 +112,10 @@
         <TextView
             android:id="@+id/links_header"
             style="@style/Header"
+            android:layout_marginEnd="@dimen/content_margin"
             android:layout_marginLeft="@dimen/content_margin"
             android:layout_marginRight="@dimen/content_margin"
+            android:layout_marginStart="@dimen/content_margin"
             android:layout_marginTop="8dp"
             android:text="@string/related_links_header"
             android:visibility="gone"/>
@@ -124,8 +126,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingBottom="@dimen/content_margin"
+            android:paddingEnd="@dimen/content_margin"
             android:paddingLeft="@dimen/content_margin"
             android:paddingRight="@dimen/content_margin"
+            android:paddingStart="@dimen/content_margin"
             android:visibility="gone"
             app:divider="?android:attr/listDivider"
             app:showDividers="middle"/>
