--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -9,8 +9,10 @@
     android:foreground="@drawable/activated_background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/list_item_padding"
+    android:paddingEnd="?attr/listPreferredItemPaddingRight"
     android:paddingLeft="?attr/listPreferredItemPaddingLeft"
     android:paddingRight="?attr/listPreferredItemPaddingRight"
+    android:paddingStart="?attr/listPreferredItemPaddingLeft"
     android:paddingTop="@dimen/list_item_padding">
 
     <TextView
