--- a/app/src/main/res/layout/item_schedule_event.xml
+++ b/app/src/main/res/layout/item_schedule_event.xml
@@ -26,8 +26,10 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:layout_marginEnd="@dimen/list_item_padding"
         android:layout_marginLeft="@dimen/list_item_padding"
         android:layout_marginRight="@dimen/list_item_padding"
+        android:layout_marginStart="@dimen/list_item_padding"
         android:layout_toEndOf="@+id/time"
         android:layout_toRightOf="@+id/time"
         android:drawablePadding="8dp"
