--- a/app/src/main/res/layout/content_extended_title.xml
+++ b/app/src/main/res/layout/content_extended_title.xml
@@ -15,7 +15,7 @@
         android:elevation="@dimen/toolbar_elevation"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             style="@style/Toolbar.Fosdem"
             android:layout_width="match_parent"
