--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -120,7 +120,7 @@
             android:text="@string/related_links_header"
             android:visibility="gone"/>
 
-        <android.support.v7.widget.LinearLayoutCompat
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/links_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
