--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:elevation="@dimen/toolbar_elevation"/>
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
