--- a/app/src/main/res/layout/track_schedule_event.xml
+++ b/app/src/main/res/layout/track_schedule_event.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
         android:visibility="gone"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
