--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_search_white_24dp"
         android:menuCategory="secondary"
         android:title="@string/search_events"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/refresh"
