--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="detail_card_view_margin_end">96dp</dimen>
     <dimen name="detail_card_view_margin_top">64dp</dimen>
     <dimen name="detail_card_view_margin_bottom">0dp</dimen>
+    <dimen name="detail_fab_margin_end">20dp</dimen>
 
 </resources>
