--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <be.digitalia.fosdem.widgets.SlidingTabLayout
-        android:id="@+id/sliding_tabs"
-        style="@style/SlidingTabs"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        style="@style/Tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="@dimen/toolbar_elevation"
-        app:contentInsetStart="0dp"
-        app:distributeEvenly="true"/>
+        android:elevation="@dimen/toolbar_elevation"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
