--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -9,12 +10,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <be.digitalia.fosdem.widgets.SlidingTabLayout
-            android:id="@+id/sliding_tabs"
-            style="@style/SlidingTabs"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            style="@style/Tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/toolbar_elevation"/>
+            android:elevation="@dimen/toolbar_elevation"
+            app:tabMode="scrollable"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
