--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<be.digitalia.fosdem.widgets.PhotoViewDrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<be.digitalia.fosdem.widgets.PhotoViewDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -10,7 +10,7 @@
 
     <!-- Main content view -->
 
-    <FrameLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -23,13 +23,13 @@
                 android:id="@+id/toolbar"
                 style="@style/Toolbar.Fosdem"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <FrameLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -42,12 +42,46 @@
             android:layout_marginTop="-7dp"
             android:max="100"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
 
-    </FrameLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <!-- Navigation drawer -->
 
-    <include layout="@layout/include_navigation_drawer"/>
+    <FrameLayout
+        android:id="@+id/main_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/main_menu_footer_height"
+            android:background="@color/main_menu_background"
+            android:fitsSystemWindows="true"
+            app:elevation="0dp"
+            app:headerLayout="@layout/navigation_header"
+            app:menu="@menu/main_navigation" />
+
+        <TextView
+            android:id="@+id/last_update"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/main_menu_footer_height"
+            android:layout_gravity="bottom"
+            android:background="@color/main_menu_footer_background"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:paddingStart="4dp"
+            android:paddingLeft="4dp"
+            android:paddingEnd="4dp"
+            android:paddingRight="4dp"
+            tools:text="DB last updated: 1 jan. 2015 13:37:00" />
+
+    </FrameLayout>
 
 </be.digitalia.fosdem.widgets.PhotoViewDrawerLayout>
