--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="main_menu_width">260dp</dimen>
     <dimen name="main_menu_header_height">128dp</dimen>
     <dimen name="main_menu_padding">16dp</dimen>
-    <dimen name="main_menu_drawable_padding">32dp</dimen>
-    <dimen name="main_menu_item_height">48dp</dimen>
     <dimen name="main_menu_footer_height">32dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="content_margin">16dp</dimen>
     <dimen name="toolbar_elevation">8dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
     <dimen name="detail_card_view_elevation">6dp</dimen>
-    <!-- Enlarge the card view by 7dp left & right and 10dp top & bottom
-        to compensate for the compatibility padding of the 6dp elevation -->
-    <dimen name="detail_card_view_margin_start">353dp</dimen>
-    <dimen name="detail_card_view_margin_end">89dp</dimen>
-    <dimen name="detail_card_view_margin_top">54dp</dimen>
-    <dimen name="detail_card_view_margin_bottom">-10dp</dimen>
-    <dimen name="fab_diameter">56dp</dimen>
-    <dimen name="fab_elevation">8dp</dimen>
-    <dimen name="fab_press_translation_z">6dp</dimen>
+    <!-- Enlarge the card view by 6dp left & right and 9dp top & bottom
+         to compensate for the compatibility padding of the elevation -->
+    <dimen name="detail_card_view_margin_start">354dp</dimen>
+    <dimen name="detail_card_view_margin_end">90dp</dimen>
+    <dimen name="detail_card_view_margin_top">55dp</dimen>
+    <dimen name="detail_card_view_margin_bottom">-9dp</dimen>
+    <dimen name="detail_fab_margin_end">8dp</dimen>
 
 </resources>
