Refactor PersonsListFragment to use a RecyclerView with fast scrolling instead of a ListView

--- a/app/src/main/res/layout/simple_list_item_1_material.xml
+++ b/app/src/main/res/layout/simple_list_item_1_material.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:focusable="true"
     android:gravity="center_vertical"
     android:minHeight="?attr/listPreferredItemHeightSmall"
-    android:paddingBottom="@dimen/list_item_padding"
-    android:paddingEnd="?attr/listPreferredItemPaddingRight"
-    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
-    android:paddingRight="?attr/listPreferredItemPaddingRight"
     android:paddingStart="?attr/listPreferredItemPaddingLeft"
+    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
     android:paddingTop="@dimen/list_item_padding"
-    android:textAppearance="?attr/textAppearanceListItem"/>
+    android:paddingEnd="?attr/listPreferredItemPaddingRight"
+    android:paddingRight="?attr/listPreferredItemPaddingRight"
+    android:paddingBottom="@dimen/list_item_padding"
+    android:textAppearance="?attr/textAppearanceListItem" />
