--- a/app/src/main/res/layout/item_schedule_event.xml
+++ b/app/src/main/res/layout/item_schedule_event.xml
@@ -1,67 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/activatedBackgroundIndicator">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/time"
         android:layout_width="80dp"
         android:layout_height="0dp"
         android:layout_alignBottom="@+id/room"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@color/schedule_time_background"
         android:padding="@dimen/list_item_padding"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold"
-        tools:text="09:30"/>
+        tools:text="09:30" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="@dimen/list_item_padding"
-        android:layout_marginLeft="@dimen/list_item_padding"
-        android:layout_marginRight="@dimen/list_item_padding"
         android:layout_marginStart="@dimen/list_item_padding"
+        android:layout_marginLeft="@dimen/list_item_padding"
+        android:layout_marginEnd="@dimen/list_item_padding"
+        android:layout_marginRight="@dimen/list_item_padding"
         android:layout_toEndOf="@+id/time"
         android:layout_toRightOf="@+id/time"
         android:drawablePadding="8dp"
         android:paddingTop="@dimen/list_item_padding"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textSize="@dimen/abc_text_size_medium_material"
-        tools:text="Welcome to FOSDEM 2015"/>
+        tools:text="Welcome to FOSDEM 2015" />
 
     <TextView
         android:id="@+id/persons"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/title"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignRight="@+id/title"
-        android:layout_alignStart="@+id/title"
         android:layout_below="@+id/title"
+        android:layout_alignStart="@+id/title"
+        android:layout_alignLeft="@+id/title"
+        android:layout_alignEnd="@+id/title"
+        android:layout_alignRight="@+id/title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        tools:text="FOSDEM Staff"/>
+        tools:text="FOSDEM Staff" />
 
     <TextView
         android:id="@+id/room"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/title"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignRight="@+id/title"
-        android:layout_alignStart="@+id/title"
         android:layout_below="@+id/persons"
+        android:layout_alignStart="@+id/title"
+        android:layout_alignLeft="@+id/title"
+        android:layout_alignEnd="@+id/title"
+        android:layout_alignRight="@+id/title"
         android:layout_marginTop="4dp"
         android:paddingBottom="@dimen/list_item_padding"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        tools:text="Janson"/>
+        tools:text="Janson" />
 
 </RelativeLayout>
