Performance fix: ensure the ViewPager is only made visible when the adapter is set to avoid it to layout pages too early

--- a/app/src/main/res/layout/track_schedule_event.xml
+++ b/app/src/main/res/layout/track_schedule_event.xml
@@ -14,7 +14,8 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
     <com.viewpagerindicator.UnderlinePageIndicator
         android:id="@+id/indicator"
