Replace legacy horizontal progress bar with material horizontal progress bar backport implementation on API <21

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -33,9 +33,8 @@
 
         </LinearLayout>
 
-        <ProgressBar
+        <be.digitalia.fosdem.widgets.MaterialHorizontalProgressBar
             android:id="@+id/progress"
-            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
