--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,4 +10,6 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="Widget.MaterialHorizontalProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal"/>
+
 </resources>
