--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,6 +4,7 @@
     <!-- Drawable used as a background for activated items. -->
     <attr name="activatedBackgroundIndicator" format="reference"/>
     <attr name="recyclerViewStyle" format="reference"/>
+    <attr name="materialHorizontalProgressBarStyle" format="reference"/>
 
     <declare-styleable name="PrimaryTextColors">
         <attr name="android:textColorPrimary"/>
