Fix RTL bugs in several fragments/activities
This commit provide better RTL support for several views.
- Items in list will have proper gravity based on user's Locale.
- The Collapsible toolbar on the Person Info Activity
will have the propert gravity based on the user's locale.

--- a/app/src/main/res/layout-ldrtl/content_extended_title.xml
+++ b/app/src/main/res/layout-ldrtl/content_extended_title.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:collapsedTitleGravity="start|center_vertical"
-            app:expandedTitleGravity="start|bottom"
+            app:collapsedTitleGravity="end|center_vertical"
+            app:expandedTitleGravity="end|bottom"
             app:expandedTitleMarginEnd="16dp"
             app:expandedTitleMarginStart="16dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
