--- a/app/src/main/res/layout/simple_list_item_1_material.xml
+++ b/app/src/main/res/layout/simple_list_item_1_material.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:focusable="true"
-    android:gravity="center_vertical"
+    android:gravity="start|center_vertical"
+    android:textAlignment="viewStart"
     android:minHeight="?attr/listPreferredItemHeightSmall"
     android:paddingStart="?attr/listPreferredItemPaddingLeft"
     android:paddingLeft="?attr/listPreferredItemPaddingLeft"
