--- a/app/src/main/res/layout/item_link.xml
+++ b/app/src/main/res/layout/item_link.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:focusable="true"
+    android:textAlignment="viewStart"
     android:gravity="start|center_vertical"
     android:minHeight="48dp"
     android:padding="@dimen/list_item_padding"/>
