--- a/app/src/main/res/layout/content_extended_title.xml
+++ b/app/src/main/res/layout/content_extended_title.xml
@@ -14,6 +14,7 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
+            style="@style/Widget.Fixed.CollapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
