--- a/app/src/main/res/layout/simple_list_item_2_material.xml
+++ b/app/src/main/res/layout/simple_list_item_2_material.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="?attr/selectableItemBackground"
-              android:focusable="true"
-              android:gravity="center_vertical"
-              android:minHeight="?attr/listPreferredItemHeight"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/list_item_padding"
-              android:paddingEnd="?attr/listPreferredItemPaddingRight"
-              android:paddingLeft="?attr/listPreferredItemPaddingLeft"
-              android:paddingRight="?attr/listPreferredItemPaddingRight"
-              android:paddingStart="?attr/listPreferredItemPaddingLeft"
-              android:paddingTop="@dimen/list_item_padding">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:focusable="true"
+    android:gravity="start|center_vertical"
+    android:minHeight="?attr/listPreferredItemHeight"
+    android:orientation="vertical"
+    android:paddingStart="?attr/listPreferredItemPaddingLeft"
+    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
+    android:paddingTop="@dimen/list_item_padding"
+    android:paddingEnd="?attr/listPreferredItemPaddingRight"
+    android:paddingRight="?attr/listPreferredItemPaddingRight"
+    android:paddingBottom="@dimen/list_item_padding">
 
     <TextView
         android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItem"/>
+        android:gravity="start"
+        android:textAlignment="viewStart"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@android:id/text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="start"
+        android:textAlignment="viewStart"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:textSize="@dimen/abc_text_size_small_material"/>
+        android:textSize="@dimen/abc_text_size_small_material" />
 
 </LinearLayout>
