--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
         <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator
         </item>
         <!-- Material padding fix -->
-        <item name="android:listPreferredItemPaddingStart" tools:ignore="NewApi">?android:attr/listPreferredItemPaddingLeft</item>
-        <item name="android:listPreferredItemPaddingEnd" tools:ignore="NewApi">?android:attr/listPreferredItemPaddingRight</item>
+        <item name="android:listPreferredItemPaddingStart" tools:targetApi="jelly_bean_mr1">?android:attr/listPreferredItemPaddingLeft</item>
+        <item name="android:listPreferredItemPaddingEnd" tools:targetApi="jelly_bean_mr1">?android:attr/listPreferredItemPaddingRight</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -50,6 +50,8 @@
         <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
     </style>
 
+    <style name="Widget.Fixed.CollapsingToolbar" parent="Widget.Design.CollapsingToolbar" />
+
     <style name="Widget.MaterialHorizontalProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
         <!-- Will be set in code -->
         <item name="android:progressDrawable">@null</item>
@@ -74,9 +76,11 @@
         <item name="android:background">#e5e5e5</item>
     </style>
 
-    <style name="Metadata" parent="TextAppearance.AppCompat.Subhead">
+    <style name="Metadata">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
         <item name="android:textColor">#666666</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
         <item name="android:drawablePadding">8dp</item>
     </style>
 
@@ -86,6 +90,8 @@
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/color_primary</item>
+        <item name="android:gravity">start</item>
+        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
     </style>
 
     <style name="RoomImageDialogAnimations">
