Adjust time padding in schedule item layout and change the highlighted time background color to accent color

--- a/app/src/main/res/layout/item_schedule_event.xml
+++ b/app/src/main/res/layout/item_schedule_event.xml
@@ -16,7 +16,12 @@
         android:layout_alignParentTop="true"
         android:background="@color/schedule_time_background"
         android:gravity="start"
-        android:padding="@dimen/list_item_padding"
+        android:paddingStart="@dimen/list_item_padding"
+        android:paddingLeft="@dimen/list_item_padding"
+        android:paddingTop="12dp"
+        android:paddingEnd="@dimen/list_item_padding"
+        android:paddingRight="@dimen/list_item_padding"
+        android:paddingBottom="@dimen/list_item_padding"
         android:textAlignment="viewStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold"
